<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Dialer</string>
    <string name="app_launcher_name">Dialer</string>
    <string name="default_phone_app_prompt">Please make this app the default Phone app</string>
    <string name="allow_displaying_over_other_apps">Please allow displaying over other apps for reliable behaviour</string>

    <!-- Contacts -->
    <string name="could_not_access_contacts">Could not access your contacts</string>

    <!-- Recents -->
    <string name="no_previous_calls">No previous calls have been found</string>
    <string name="could_not_access_the_call_history">Could not access the call history</string>
    <string name="request_access">Request access</string>
    <string name="remove_confirmation">Are you sure you want to remove the selected items from the Call History?</string>
    <string name="clear_history_confirmation">Are you sure you want to remove everything from the Call History?</string>
    <string name="show_grouped_calls">Show grouped calls</string>
    <string name="clear_call_history">Clear call history</string>
    <string name="show_call_details">Show call details</string>

    <!-- Dialpad -->
    <string name="dialpad">Dialpad</string>
    <string name="asterisk">Asterisk</string>
    <string name="hashtag">Hashtag</string>
    <string name="call_number">Call number</string>

    <!-- Dialer -->
    <string name="dialer">Dialer</string>
    <string name="accept">Accept</string>
    <string name="accept_call">Accept call</string>
    <string name="decline">Decline</string>
    <string name="decline_call">Decline call</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="is_calling">Is Calling…</string>
    <string name="dialing">Dialing…</string>
    <string name="call_missed">Missed Call</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_ending">Call Ending</string>
    <string name="ongoing_call">Ongoing Call</string>
    <string name="select_sim">Select a SIM for this call</string>
    <string name="always_use_this_sim">Always use this SIM for this number</string>
    <string name="unset_default_sim">Unset default SIM</string>
    <string name="calls">Calls</string>
    <string name="turn_microphone_on">Turn microphone on</string>
    <string name="turn_microphone_off">Turn microphone off</string>
    <string name="turn_speaker_on">Turn speaker on</string>
    <string name="turn_speaker_off">Turn speaker off</string>
    <string name="show_dialpad">Show dialpad</string>
    <string name="hide_dialpad">Hide dialpad</string>
    <string name="end_call">End call</string>
    <string name="hold_call">Hold call</string>
    <string name="resume_call">Resume call</string>
    <string name="call_on_hold">On Hold</string>
    <string name="call_swap">Swap calls</string>
    <string name="call_merge">Merge calls</string>
    <string name="call_split">Split call</string>
    <string name="call_add">Add call</string>
    <string name="conference_manage">Manage conference call</string>
    <string name="conference">Conference</string>

    <!-- Speed dial -->
    <string name="speed_dial">Speed dial</string>
    <string name="manage_speed_dial">Manage speed dial</string>
    <string name="speed_dial_label">Click on a number to assign a contact to it. You can then quickly call the given contact by long pressing the given number at the dialer.</string>

    <!-- Settings -->
    <string name="group_subsequent_calls">Group subsequent calls with the same number at the call log</string>
    <string name="open_dialpad_by_default">Open the dialpad by default when the app opens</string>
    <string name="disable_proximity_sensor">Disable proximity sensor during calls</string>
    <string name="disable_swipe_to_answer">Replace swiping at responding to incoming calls with clicking</string>

    <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
    <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
    <string name="app_title">Simple Dialer - Manage your phone calls easily</string>
    <!-- Short description has to have less than 80 chars -->
    <string name="app_short_description">A handy phone call manager with phonebook, number blocking and multi-SIM support</string>
    <string name="app_long_description">
        A lightweight app for handling your calls, no matter where are you. Comes with a handy call log for easy call initiation.

        There is a quick dialpad at your service too, with smart contact suggestions. It supports letters too.

        You can easily block phone numbers to avoid unwanted incoming calls.

        Supported Speed dialing makes calling your favorite contacts with this true phone a breeze.

        To help you manage your calls quickly the Phone app also supports favorite contacts and creating shortcuts of any contact on the home screen.

        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.

        Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors.

        <b>Check out the full suite of Simple Tools here:</b>
        https://www.simplemobiletools.com

        <b>Facebook:</b>
        https://www.facebook.com/simplemobiletools

        <b>Reddit:</b>
        https://www.reddit.com/r/SimpleMobileTools
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dialer">DialerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="call">Call</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="content_description_show_numpad">Numpad</string>
    <string name="content_description_terminate_call">Hangup</string>
    <string name="content_description_numpad_1">1</string>
    <string name="content_description_numpad_2">2</string>
    <string name="content_description_numpad_3">3</string>
    <string name="content_description_numpad_4">4</string>
    <string name="content_description_numpad_5">5</string>
    <string name="content_description_numpad_6">6</string>
    <string name="content_description_numpad_7">7</string>
    <string name="content_description_numpad_8">8</string>
    <string name="content_description_numpad_9">9</string>
    <string name="content_description_numpad_0">0</string>
    <string name="content_description_numpad_star">*</string>
    <string name="content_description_numpad_sharp">#</string>

    <!-- Call -->
    <string name="call_incoming_title">Incoming Call</string>
    <string name="conference_incoming_title">Incoming Conference Call</string>
    <string name="call_outgoing_title">Outgoing Call</string>
    <string name="call_notification_paused">Paused call</string>
    <string name="call_notification_outgoing">Outgoing call</string>
    <string name="call_notification_active">Call running</string>
    <string name="call_error_declined">Call has been declined</string>
    <string name="call_error_user_busy">User is busy</string>
    <string name="call_error_user_not_found">User hasn\'t been found</string>
    <string name="call_error_incompatible_media_params">Incompatible media parameters</string>
    <string name="call_error_network_unreachable">Network is unreachable</string>
    <string name="call_error_io_error">Service unavailable or network error</string>
    <string name="call_error_server_timeout">Server timeout</string>
    <string name="call_error_temporarily_unavailable">Temporarily unavailable</string>
    <string name="call_error_generic">Error: %s</string>
    <string name="call_video_update_requested_dialog">Correspondent would like to turn the video on</string>
    <string name="call_action_participants_list">Participants list</string>
    <string name="call_action_chat">Chat</string>
    <string name="call_action_calls_list">Calls list</string>
    <string name="call_action_numpad">Numpad</string>
    <string name="call_action_change_conf_layout">Change layout</string>
    <string name="call_action_statistics">Call statistics</string>
    <string name="call_action_add_call">Start new call</string>
    <string name="call_action_transfer_call">Transfer call</string>
    <string name="call_context_action_resume">Resume call</string>
    <string name="call_context_action_pause">Pause call</string>
    <string name="call_context_action_transfer">Transfer call</string>
    <string name="call_context_action_answer">Answer call</string>
    <string name="call_context_action_hangup">Terminate call</string>
    <string name="call_remote_recording">This call is being recorded.</string>
    <string name="call_remotely_paused_title">Call has been paused by remote.</string>
    <string name="call_locally_paused_title">You have paused the call.</string>
    <string name="call_locally_paused_subtitle">Click on play button to resume it.</string>

    <!-- Call stats -->
    <string name="call_stats_audio">Audio</string>
    <string name="call_stats_video">Video</string>
    <string name="call_stats_codec">Codec:</string>
    <string name="call_stats_ip">IP Family:</string>
    <string name="call_stats_upload">Upload bandwidth:</string>
    <string name="call_stats_download">Download bandwidth:</string>
    <string name="call_stats_estimated_download">Estimated download bandwidth:</string>
    <string name="call_stats_ice">ICE connectivity:</string>
    <string name="call_stats_video_resolution_sent">Sent video resolution:</string>
    <string name="call_stats_video_resolution_received">Received video resolution:</string>
    <string name="call_stats_video_fps_sent">Sent video fps:</string>
    <string name="call_stats_video_fps_received">Received video fps:</string>
    <string name="call_stats_sender_loss_rate">Sender loss rate:</string>
    <string name="call_stats_receiver_loss_rate">Receiver loss rate:</string>
    <string name="call_stats_jitter_buffer">Jitter buffer:</string>
    <string name="call_stats_encoder_name">Encoder:</string>
    <string name="call_stats_decoder_name">Decoder:</string>
    <string name="call_stats_player_filter">Player filter:</string>
    <string name="call_stats_capture_filter">Capture filter:</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="content_description_answer_call">Answer</string>
    <string name="content_description_hide_numpad">Hide numpad</string>
    <string name="content_description_enable_mic_mute">Mute your microphone</string>
    <string name="content_description_disable_mic_mute">Un-mute your microphone</string>
    <string name="content_description_enable_speaker">Route audio to the speaker</string>
    <string name="content_description_disable_speaker">Route audio to the earpiece</string>
    <string name="speaker">Speaker</string>
    <string name="error">Error</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="work">Office</string>
    <string name="main_number">Main number</string>
    <string name="work_fax">Office Fax</string>
    <string name="home_fax">Home Fax</string>
    <string name="pager">Pager</string>
    <string name="other">Other</string>

</resources>
